--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,3 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<h1>Error Message: <%= message %></h1>
+<h2>Error Status Code: <%= error.status %></h2>
+<pre>Error Stack: <%= error.stack %></pre>
