--- a/views/journals/edit.ejs
+++ b/views/journals/edit.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 
   <head>
@@ -22,7 +22,7 @@
       <ul>
       <li><a href="/journals">List All Journal Entries</a></li>
       <br>
-      <li><a href="#">HOME</a></li>
+      <li><a href="/">HOME</a></li>
       <br>
       <li><a href="#">Search by Event</a></li>
       <li><a href="#">Search by Date</a></li>
@@ -32,21 +32,22 @@
     </nav>
 
     <article>
+      <fieldset>
+        <legend> Journal Entry </legend>
 
       <form method="POST" action="/journals/<%= journal._id %>">
           <input type="hidden" name="_method" value="PUT">
           <br>
-          <br>
-          <div class="fldname" id="title"> <strong> Entry Title: </strong></div>
-          <div class="fldname" id="field"><input type="text" name="enttitle" value="<%= journal.enttitle %>"></div>
-          <br>
-          <br>
-          <div class="fldname" id="title"> <strong> Entry Date: </strong></div>
-          <div class="fldname" id="field"><input type="date" name="entdate" value="<%= journal.entdate %>" ></div>
+          <div class="title"> Entry Title:  </div>
+          <div class="field"><input type="text" name="enttitle" value="<%= journal.enttitle %>"></div>
           <br>
           <br>
-          <div class="fldname" id="title"> <strong> Entry Reference: </strong></div>
-          <div class="fldname" id="field"><input list="period" type="text" name="entperiod" value="<%= journal.entperiod %>" ></div>
+          <div class="title"> Entry Date:  </div>
+          <div class="field-date"><input type="date" name="entdate" value="<%= journal.entdate %>" ></div>
+          <br>
+          <br>
+          <div class="title">  Entry Reference:  </div>
+          <div class="field"><input list="period" type="text" name="entperiod" value="<%= journal.entperiod %>" ></div>
           <datalist id="period">
             <option value="0000-All Day">
             <option value="0100-Early Morning">
@@ -61,27 +62,35 @@
           </datalist>
           <br>
           <br>
-          <div class="fldname" id="title"> <strong> Journal Entry: </strong></div>
+          <div class="title">  Journal Entry:  </div>
+          <!-- <div class="fldname" id="field-entry"><%= journal.journalentry %> </div> -->
           <div> <textarea name="journalentry" > <%= journal.journalentry %>
           </textarea></div>
           <br>
           <br>
-            <div class="fldname" id="title"> <strong> User ID: </strong></div>
-            <div class="fldname" id="field"><input type="text" name="userid" value="<%= journal.userid %>"></div>
-            <div class="fldname" id="title"> <strong> User Entry ID: </strong></div>
-            <div class="fldname" id="field"><input type="text" name="entryid" value="<%= journal.entryid %>"></div>
-            <div class="fldname" id="title"> <strong> Code: </strong></div>
-            <div class="fldname" id="field"><input type="text" name="periodcode" value="<%= journal.periodcode %>"></div>
-            <br>
-            <br>
-            <div class="fldname" id="title"> <strong> Date Convert: </strong></div>
-            <div class="fldname" id="field"><input type="text" name="dateconvt" value="<%= journal.dateconvt %>"></div>
-            <div class="fldname" id="title"> <strong> DB ID: </strong></div>
-            <div class="fldname" id="field"><input type="text" name="dbid" value="<%= journal.dbid %>"></div>
+          <div class="title"> User ID: </div>
+          <div class="field-display-only"><%= journal.userid %></div>
+          <div class="title">  Entry ID:   </div>
+          <div class="field-display-only"><%= journal.entryid %></div>
+          <div class="title">  Code:   </div>
+          <div class="field-display-only"><%= journal.periodcode %></div>
+          <br>
+          <br>
+          <div class="title"> Date Code: </div>
+          <div class="field-display-only"><%= journal.dateconvt %></div>
+          <div class="title">  DB ID:   </div>
+          <div class="field-display-only"><%= journal.dbid %></div>
+          <br>
+          <input type="hidden" name="userid" value=<%= journal.userid %> >
+          <input type="hidden" name="entryid" value=<%= journal.entryid %> >
+          <input type="hidden" name="periodcode" value=<%= journal.periodcode %> >
+          <input type="hidden" name="dateconvt" value=<%= journal.dateconvt %> >
+          <input type="hidden" name="dbid" value=<%= journal.dbid %> >
           <br>
           <br>
           <input type="submit" value="Update Journal Entry">
         </form>
+      </fieldset>
       </article>
 
       <footer>Copyright &copy; Brian K Petitt</footer>
