Final Project: Journal (v2.2) Still working on D of CRUD (bkp)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,9 @@
         <li><a href="#">Search by Date</a></li>
         <li><a href="#">Search by Keyword</a></li>
         <li><a href="#">Search by Event</a></li>
+        <br>
+        <li><a href="/journals/indextv">Search TV</a></li>
+        <br>
       </ul>
     </nav>
 
@@ -78,11 +81,11 @@
       <div class="title">  DB ID:   </div>
       <div class="field-display-only"><%= dbid %></div>
       <br>
-      <input type="hidden" name="userid" value=<%= userid %>
-      <input type="hidden" name="entryid" value=<%= entryid %>
-      <input type="hidden" name="periodcode" value=<%= periodcode %>
-      <input type="hidden" name="dateconvt" value=<%= dateconvt %>
-      <input type="hidden" name="dbid" value=<%= dbid %>
+      <input type="hidden" name="userid" value=<%= userid %> >
+      <input type="hidden" name="entryid" value=<%= entryid %> >
+      <input type="hidden" name="periodcode" value=<%= periodcode %> >
+      <input type="hidden" name="dateconvt" value=<%= dateconvt %> >
+      <input type="hidden" name="dbid" value=<%= dbid %> >
       <br>
       <br>
       <input type="submit" value="Add Journal Entry">
