--- a/views/journals/index.ejs
+++ b/views/journals/index.ejs
@@ -19,9 +19,11 @@
 
     <nav>
       <ul>
+        <li><a href="/">HOME</a></li>
+        <br>
         <li><a href="/journals/new">Add Journal Entry</a></li>
         <br>
-        <li><a href="/">HOME</a></li>
+        <li><a href="/journals">List All Journal Entries</a></li>
         <br>
         <li><a href="#">Search by Event</a></li>
         <li><a href="#">Search by Date</a></li>
