--- a/views/journals/show.ejs
+++ b/views/journals/show.ejs
@@ -18,9 +18,11 @@
 
       <nav>
         <ul>
-          <li><a href="/journals">View to All Entries</a></li>
-          <br>
           <li><a href="/">HOME</a></li>
+          <br>
+          <li><a href="/journals/new">Add Journal Entry</a></li>
+          <br>
+          <li><a href="/journals">List All Journal Entries</a></li>
           <br>
           <li><a href="#">Search by Event</a></li>
           <li><a href="#">Search by Date</a></li>
@@ -80,7 +82,7 @@
             </a>
             <br>
             <br>
-            <a href="/reviews/new?<%= journal._id %> ">
+            <a href="/journals/new">
               <button>Create Journal Entry</button>
             </a>
         </div>
