--- a/views/journals/new.ejs
+++ b/views/journals/new.ejs
@@ -19,9 +19,9 @@
 
     <nav>
       <ul>
-        <li><a href="/journals">List all Journal Entries</a></li>
-        <br>
         <li><a href="/">HOME</a></li>
+        <br>
+        <li><a href="/journals">List All Journal Entries</a></li>
         <br>
         <li><a href="#">Search by Event</a></li>
         <li><a href="#">Search by Date</a></li>
@@ -81,11 +81,11 @@
       <div class="title"> DB ID:   </div>
       <div class="field-display-only"><%= dbid %></div>
       <br>
-      <input type="hidden" name="userid" value=<%= userid %>
-      <input type="hidden" name="entryid" value=<%= entryid %>
-      <input type="hidden" name="periodcode" value=<%= periodcode %>
-      <input type="hidden" name="dateconvt" value=<%= dateconvt %>
-      <input type="hidden" name="dbid" value=<%= dbid %>
+      <input type="hidden" name="userid" value=<%= userid %> >
+      <input type="hidden" name="entryid" value=<%= entryid %> >
+      <input type="hidden" name="periodcode" value=<%= periodcode %> >
+      <input type="hidden" name="dateconvt" value=<%= dateconvt %> >
+      <input type="hidden" name="dbid" value=<%= dbid %> >
       <br>
       <br>
       <input type="submit" value="Add Journal Entry">
